add tag clasification

--- a/index.html
+++ b/index.html
@@ -124,5 +124,22 @@
       <a href="https://drive.google.com/drive/my-drive" class="shopify google">
         Google drive</a>
     </main>
+
+    <script>
+      const app = 'app';
+      const doc = 'doc';
+      const rep = 'repo';
+
+      const shp = 'shopify';
+      const ux  = 'ux';
+      const fed = 'fed';
+      const chn = 'channels';
+      const amz = 'amazon';
+      const id  = 'identity';
+
+      const gog = 'google';
+      const gh  = 'github';
+      const vlt = 'vault';
+    </script>
   </body>
 </html>
