--- a/index.html
+++ b/index.html
@@ -126,6 +126,39 @@
     </main>
 
     <script>
+      const db = [
+        ['Github identity repo', 'https://github.com/Shopify/identity'],
+        ['Github identity projects', 'https://github.com/Shopify/identity/projects/'],
+        ['Github identity milestone ux', 'https://github.com/Shopify/identity/milestone/9'],
+        ['Bugsnag identity js', 'https://app.bugsnag.com/shopify/identity-javascript/'],
+        ['Identity dashboard prod', 'https://accounts.shopify.com/services/dashboard'],
+        ['Identity prod', 'https://accounts.shopify.com/'],
+
+        ['Github Amazon repo', 'https://github.com/Shopify/sell-on-amazon'],
+        ['Github Amazon issues', 'https://github.com/Shopify/sell-on-amazon/issues?q=is%3Aopen+assignee%3Aleo-shopify'],
+        ['Bugsnag Amazon js', 'https://app.bugsnag.com/shopify/sell-on-amazon-js/'],
+        ['Waffle Amazon', 'https://waffle.io/Shopify/sell-on-amazon'],
+        ['Amazon dev', 'https://marki-test.myshopify.com/admin/apps/amazon-dev/'],
+
+        ['Github leo', 'https://github.com/leo-shopify?tab=repositories'],
+        ['Github Shopify', 'https://github.com/Shopify'],
+
+        ['Octobox', 'https://octobox.shopify.io/'],
+        ['Devdocs', 'http://devdocs.io/'],
+        ['Slack', 'https://shopify.slack.com/'],
+        ['Okta', 'https://shopify.okta.com/app/UserHome'],
+
+        ['Admin style guide', 'http://styleguide.myshopify.com/'],
+        ['Marketing style guide', 'http://ux.shopify.io/'],
+        ['Polaris style guide', 'https://polaris.shopify.com/'],
+
+        ['Vault unicorn', 'https://unicorn.shopify.com/'],
+        ['Vault employees', 'http://unicorn.shopify.com/employees'],
+        ['Vault teams', 'https://unicorn.shopify.com/teams'],
+        ['Vault projects', 'https://unicorn.shopify.com/projects'],
+        ['Vault data portal', 'https://data.shopify.com/'],
+        ['Vault departments', 'https://vault.shopify.com/Departments']
+      ];
     </script>
   </body>
 </html>
