add google apps and reorganize some links

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       .amazon { border-color: #684; }
       .github { border-color: #468; }
       .app { border-color: #874; }
-      .styleguide { border-color: #758; }
+      .guide { border-color: #758; }
       .vault { border-color: #488; }
     </style>
   </head>
@@ -192,17 +192,21 @@
         ['amazon', 'Waffle Amazon', 'https://waffle.io/Shopify/sell-on-amazon'],
         ['amazon', 'Amazon dev', 'https://marki-test.myshopify.com/admin/apps/amazon-dev/'],
 
+        ['github', 'Octobox', 'https://octobox.shopify.io/'],
         ['github', 'Github leo', 'https://github.com/leo-shopify?tab=repositories'],
         ['github', 'Github Shopify', 'https://github.com/Shopify'],
 
-        ['app', 'Devdocs', 'http://devdocs.io/'],
         ['app', 'Slack', 'https://shopify.slack.com/'],
         ['app', 'Okta', 'https://shopify.okta.com/app/UserHome'],
-        ['app', 'Octobox', 'https://octobox.shopify.io/'],
+        ['app', 'Google mail', 'https://mail.google.com/mail/'],
+        ['app', 'Google calendar', 'https://calendar.google.com/calendar/'],
+        ['app', 'Google drive', 'https://drive.google.com/drive/'],
+        ['app', 'Google meet', 'https://meet.google.com/'],
 
-        ['styleguide', 'Admin style guide', 'http://styleguide.myshopify.com/'],
-        ['styleguide', 'Marketing style guide', 'http://ux.shopify.io/'],
-        ['styleguide', 'Polaris style guide', 'https://polaris.shopify.com/'],
+        ['guide', 'Devdocs', 'http://devdocs.io/'],
+        ['guide', 'Admin style guide', 'http://styleguide.myshopify.com/'],
+        ['guide', 'Marketing style guide', 'http://ux.shopify.io/'],
+        ['guide', 'Polaris style guide', 'https://polaris.shopify.com/'],
 
         ['vault', 'Vault unicorn', 'https://unicorn.shopify.com/'],
         ['vault', 'Vault employees', 'http://unicorn.shopify.com/employees'],
