add grid by example

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
         ['guide', 'Admin style guide', 'http://styleguide.myshopify.com/'],
         ['guide', 'Marketing style guide', 'http://ux.shopify.io/'],
         ['guide', 'Polaris style guide', 'https://polaris.shopify.com/'],
+        ['guide', 'Grid by example', 'https://gridbyexample.com/examples/'],
 
         ['vault', 'Vault unicorn', 'https://unicorn.shopify.com/'],
         ['vault', 'Vault employees', 'http://unicorn.shopify.com/employees'],
