make corners less prominent

--- a/index.html
+++ b/index.html
@@ -26,11 +26,10 @@
           background-color: #333;
           font: 16px/24px Tahoma, sasns-serif;
           border: 0;
-          border-bottom: 2px solid #888;
-          border-radius: 6px;
-          padding: 0 12px 6px;
-          margin: 0 6px;
-          align-self: start;
+          border-bottom: 2px solid #777;
+          border-radius: 2px;
+          padding: 0 6px 6px 12px;
+          width: 100%;
       }
       nav > .tags {
           grid-column: 1/-1;
@@ -47,6 +46,7 @@
           padding-bottom: 6px;
           border-bottom-width: 2px;
           border-bottom-style: solid;
+          border-radius: 2px;
           color: #ccc;
       }
 
