remove search outline

--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
           padding: 0 6px 6px 12px;
           width: 100%;
       }
+      #Search > input:focus {
+          outline: 0 none;
+          border-bottom-color: #ccc;
+      }
       nav > .tags {
           grid-column: 1/-1;
       }
