--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
       main > a:visited {
           color: #ccc;
       }
+      main > a:focus,
       main > a:hover {
           background-color: #111;
       }
