add circleci and shipit

--- a/index.html
+++ b/index.html
@@ -219,6 +219,8 @@
         ['github', 'Github Shopify', 'https://github.com/Shopify'],
 
         ['app', 'Slack', 'https://shopify.slack.com/'],
+        ['app', 'Circle CI', 'https://circleci.com/gh/Shopify/'],
+        ['app', 'Shippit', 'https://shipit.shopify.io/'],
         ['app', 'Okta', 'https://shopify.okta.com/app/UserHome'],
         ['app', 'Google mail', 'https://mail.google.com/mail/'],
         ['app', 'Google calendar', 'https://calendar.google.com/calendar/'],
