add group *other*

--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
       .app { border-color: #874; }
       .guide { border-color: #758; }
       .vault { border-color: #488; }
+      .other { border-color: #777; }
     </style>
   </head>
   <body>
@@ -238,7 +239,14 @@
         ['vault', 'Vault teams', 'https://unicorn.shopify.com/teams'],
         ['vault', 'Vault projects', 'https://unicorn.shopify.com/projects'],
         ['vault', 'Vault data portal', 'https://data.shopify.com/'],
-        ['vault', 'Vault departments', 'https://vault.shopify.com/Departments']
+        ['vault', 'Vault departments', 'https://vault.shopify.com/Departments'],
+
+        ['other', 'Org mode manual', 'http://orgmode.org/manual/'],
+        ['other', 'Racket', 'http://racket-lang.org/'],
+        ['other', 'Hacker news', 'https://news.ycombinator.com/'],
+        ['other', 'Reddir', 'https://reddit.com/'],
+        ['other', 'Toronto Public Library', 'http://www.torontopubliclibrary.ca/search.jsp?Ntt=safari'],
+        ['other', 'Spotify', 'https://play.spotify.com/'],
       ]);
     </script>
   </body>
