adjust border styling

--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
           text-decoration: none;
           color: #ccc;
           background-color: #222;
+          border: 2px none;
           border-right-width: 6px;
           border-right-style: solid;
           border-radius: 6px;
@@ -85,16 +86,13 @@
       main > a:focus,
       main > a:target {
           outline: 0 none;
-          border-top-width: 1px;
-          border-bottom-width: 1px;
-          border-left-width: 1px;
           border-style: solid;
       }
 
-      .identity { border-color: #844; }
+      .identity { border-color: #874; }
       .amazon { border-color: #684; }
       .github { border-color: #468; }
-      .app { border-color: #874; }
+      .app { border-color: #844; }
       .guide { border-color: #758; }
       .vault { border-color: #488; }
       .other { border-color: #777; }
