--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <title>Quickie</title>
     <meta charset="utf-8">
+    <link rel="icon" href=
+          "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQBAMAAADt3eJSAAAAGFBMVEVZWFaJiIc5NzX/ZgDNzcxCQT/X19fQt6UU5V15AAAAUUlEQVR42mMoNgYDcwZjKGBQggIQg1EAwlBIS2MCMxTT0oQgDPFCCEOhxB0sFeLKKBDiBGKkiAa6gRhKgS4uokrIDLhUiKuSElgxzC4hCK0IAIZnFxEQps27AAAAAElFTkSuQmCC">
     <style>
       html {
           color: #ccc;
