--- a/index.html
+++ b/index.html
@@ -232,6 +232,7 @@
         ['guide', 'Admin style guide', 'http://styleguide.myshopify.com/'],
         ['guide', 'Marketing style guide', 'http://ux.shopify.io/'],
         ['guide', 'Polaris style guide', 'https://polaris.shopify.com/'],
+        ['guide', 'JSDoc', 'http://usejsdoc.org/'],
         ['guide', 'Grid by example', 'https://gridbyexample.com/examples/'],
 
         ['vault', 'Vault unicorn', 'https://unicorn.shopify.com/'],
