--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
         ['other', 'Org mode manual', 'http://orgmode.org/manual/'],
         ['other', 'Racket', 'http://racket-lang.org/'],
         ['other', 'Hacker news', 'https://news.ycombinator.com/'],
-        ['other', 'Reddir', 'https://reddit.com/'],
+        ['other', 'Reddit', 'https://reddit.com/'],
         ['other', 'Toronto Public Library', 'http://www.torontopubliclibrary.ca/search.jsp?Ntt=safari'],
         ['other', 'Spotify', 'https://play.spotify.com/'],
       ]);
