--- a/index.html
+++ b/index.html
@@ -7,8 +7,35 @@
           "data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQBAMAAADt3eJSAAAAGFBMVEVZWFaJiIc5NzX/ZgDNzcxCQT/X19fQt6UU5V15AAAAUUlEQVR42mMoNgYDcwZjKGBQggIQg1EAwlBIS2MCMxTT0oQgDPFCCEOhxB0sFeLKKBDiBGKkiAa6gRhKgS4uokrIDLhUiKuSElgxzC4hCK0IAIZnFxEQps27AAAAAElFTkSuQmCC">
     <style>
       html {
-          color: #ccc;
-          background-color: #333;
+          --c00: #a6cee3;
+          --c01: #1f78b4;
+          --c02: #b2df8a;
+          --c03: #33a02c;
+          --c04: #fb9a99;
+          --c05: #e31a1c;
+          --c06: #fdbf6f;
+          --c07: #ff7f00;
+          --c08: #cab2d6;
+          --c09: #6a3d9a;
+          --c10: #ffff99;
+          --c11: #b15928;
+
+          --light: #ccc;
+          --med: #777;
+          --dark: #333;
+          --darker: #222;
+          --darkest: #111;
+
+          --fg: var(--light);
+          --bg: var(--dark);
+
+          --thiner: 2px;
+          --thin: 3px;
+
+          /***********************************/
+
+          color: var(--fg);
+          background-color: var(--bg);
           font: 16px/24px Tahoma, sasns-serif;
       }
       body {
@@ -24,18 +51,18 @@
           margin-bottom: 12px;
       }
       #Search > input {
-          color: #ccc;
-          background-color: #333;
+          color: var(--fg);
+          background-color: var(--bg);
           font: 16px/24px Tahoma, sasns-serif;
           border: 0;
-          border-bottom: 2px solid #777;
-          border-radius: 2px;
+          border-bottom: var(--thiner) solid var(--med);
+          border-radius: var(--thiner);
           padding: 0 6px 6px 12px;
           width: 100%;
       }
       #Search > input:focus {
           outline: 0 none;
-          border-bottom-color: #ccc;
+          border-bottom-color: var(--fg);
       }
       nav > .tags {
           grid-column: 1/-1;
@@ -50,10 +77,10 @@
           font-size: 14px;
           margin-left: 12px;
           padding-bottom: 6px;
-          border-bottom-width: 2px;
+          border-bottom-width: var(--thiner);
           border-bottom-style: solid;
-          border-radius: 2px;
-          color: #ccc;
+          border-radius: var(--thiner);
+          color: var(--fg);
       }
 
       nav,
@@ -68,22 +95,22 @@
       }
       main > a {
           text-decoration: none;
-          color: #ccc;
-          background-color: #222;
-          border: 2px none;
-          border-right-width: 6px;
-          border-right-style: solid;
-          border-radius: 6px;
+          color: var(--fg);
+          background-color: var(--darker);
+          border: var(--thiner) none;
+          border-left-width: var(--thiner);
+          border-left-style: solid;
+          border-radius: var(--thiner);
           padding-left: 12px;
           display: flex;
           align-items: center;
       }
       main > a:visited {
-          color: #ccc;
+          color: var(--fg);
       }
       main > a:focus,
       main > a:hover {
-          background-color: #111;
+          background-color: var(--darkest);
       }
       main > a:focus,
       main > a:target {
@@ -91,13 +118,15 @@
           border-style: solid;
       }
 
-      .identity { border-color: #874; }
-      .amazon { border-color: #684; }
-      .github { border-color: #468; }
-      .app { border-color: #844; }
-      .guide { border-color: #758; }
-      .vault { border-color: #488; }
-      .other { border-color: #777; }
+      .doc { border-color: var(--c00); }
+      .guide { border-color: var(--c01); }
+      .identity { border-color: var(--c02); }
+      .amazon { border-color: var(--c03); }
+      .app { border-color: var(--c06); }
+      .google { border-color: var(--c07); }
+      .vault { border-color: var(--c08); }
+      .github { border-color: var(--c04); }
+      .other { border-color: var(--c05); }
     </style>
   </head>
   <body>
