cleanup and add links

--- a/index.html
+++ b/index.html
@@ -231,39 +231,41 @@
       }
 
       start([
-        ['identity', 'Github identity repo', 'https://github.com/Shopify/identity'],
-        ['identity', 'Github identity projects', 'https://github.com/Shopify/identity/projects/'],
-        ['identity', 'Github identity milestone ux', 'https://github.com/Shopify/identity/milestone/9'],
-        ['identity', 'Bugsnag identity js', 'https://app.bugsnag.com/shopify/identity-javascript/'],
+        ['identity', 'Identity github repo', 'https://github.com/Shopify/identity'],
+        ['identity', 'Identity github projects', 'https://github.com/Shopify/identity/projects/'],
+        ['identity', 'Identity github milestone ux', 'https://github.com/Shopify/identity/milestone/9'],
+        ['identity', 'Identity bugsnag js', 'https://app.bugsnag.com/shopify/identity-javascript/'],
         ['identity', 'Identity dashboard prod', 'https://accounts.shopify.com/services/dashboard'],
         ['identity', 'Identity prod', 'https://accounts.shopify.com/'],
 
-        ['amazon', 'Github Amazon repo', 'https://github.com/Shopify/sell-on-amazon'],
-        ['amazon', 'Github Amazon issues', 'https://github.com/Shopify/sell-on-amazon/issues?q=is%3Aopen+assignee%3Aleo-shopify'],
-        ['amazon', 'Bugsnag Amazon js', 'https://app.bugsnag.com/shopify/sell-on-amazon-js/'],
-        ['amazon', 'Waffle Amazon', 'https://waffle.io/Shopify/sell-on-amazon'],
+        ['amazon', 'Amazon github repo', 'https://github.com/Shopify/sell-on-amazon'],
+        ['amazon', 'Amazon github issues', 'https://github.com/Shopify/sell-on-amazon/issues?q=is%3Aopen+assignee%3Aleo-shopify'],
+        ['amazon', 'Amazon bugsnag js', 'https://app.bugsnag.com/shopify/sell-on-amazon-js/'],
+        ['amazon', 'Amazon waffle board', 'https://waffle.io/Shopify/sell-on-amazon'],
         ['amazon', 'Amazon dev', 'https://marki-test.myshopify.com/admin/apps/amazon-dev/'],
-
-        ['github', 'Octobox', 'https://octobox.shopify.io/'],
-        ['github', 'Github leo', 'https://github.com/leo-shopify?tab=repositories'],
-        ['github', 'Github Shopify', 'https://github.com/Shopify'],
 
         ['app', 'Slack', 'https://shopify.slack.com/'],
         ['app', 'Circle CI', 'https://circleci.com/gh/Shopify/'],
         ['app', 'Shippit', 'https://shipit.shopify.io/'],
         ['app', 'Okta', 'https://shopify.okta.com/app/UserHome'],
-        ['app', 'Google mail', 'https://mail.google.com/mail/'],
-        ['app', 'Google calendar', 'https://calendar.google.com/calendar/'],
-        ['app', 'Google drive', 'https://drive.google.com/drive/'],
-        ['app', 'Google meet', 'https://meet.google.com/'],
 
-        ['guide', 'Devdocs', 'http://devdocs.io/'],
+        ['google', 'Google mail', 'https://mail.google.com/mail/'],
+        ['google', 'Google calendar', 'https://calendar.google.com/calendar/'],
+        ['google', 'Google drive', 'https://drive.google.com/drive/'],
+        ['google', 'Google meet', 'https://meet.google.com/'],
+
+        ['doc', 'Devdocs', 'http://devdocs.io/'],
+        ['doc', 'JSDoc', 'http://usejsdoc.org/'],
+        ['doc', 'Grid by example', 'https://gridbyexample.com/examples/'],
+        ['doc', 'Org mode manual', 'http://orgmode.org/manual/'],
+        ['doc', 'Dev Acceleration', 'https://dev-accel.shopify.io/'],
+        ['doc', 'Stack overflow', 'https://stack.shopify.io/'],
+
         ['guide', 'Admin style guide', 'http://styleguide.myshopify.com/'],
         ['guide', 'Marketing style guide', 'http://ux.shopify.io/'],
         ['guide', 'Polaris style guide', 'https://polaris.shopify.com/'],
-        ['guide', 'JSDoc', 'http://usejsdoc.org/'],
-        ['guide', 'Grid by example', 'https://gridbyexample.com/examples/'],
 
+        ['vault', 'Vault wiki', 'https://vault.shopify.com/'],
         ['vault', 'Vault unicorn', 'https://unicorn.shopify.com/'],
         ['vault', 'Vault employees', 'http://unicorn.shopify.com/employees'],
         ['vault', 'Vault teams', 'https://unicorn.shopify.com/teams'],
@@ -271,7 +273,10 @@
         ['vault', 'Vault data portal', 'https://data.shopify.com/'],
         ['vault', 'Vault departments', 'https://vault.shopify.com/Departments'],
 
-        ['other', 'Org mode manual', 'http://orgmode.org/manual/'],
+        ['github', 'Octobox', 'https://octobox.shopify.io/'],
+        ['github', 'Github leo', 'https://github.com/leo-shopify?tab=repositories'],
+        ['github', 'Github Shopify', 'https://github.com/Shopify'],
+
         ['other', 'Racket', 'http://racket-lang.org/'],
         ['other', 'Hacker news', 'https://news.ycombinator.com/'],
         ['other', 'Reddit', 'https://reddit.com/'],
