clear search on esc

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
       }
 
       function clearAndFocus(elm) {
-        elm.value = '';
+        if (document.activeElement === elm) elm.value = '';
         elm.focus();
       }
 
