--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       nav > tags {
           grid-column: 1/-1;
       }
-      @media(min-width: 615px) { /* 6(mar) + 300(col) + 3(gap) + 300(col) + 6(mar) */
+      @media(min-width: 744px) { /* (6(mar) + 240(col)) * 3 + 6(mar) */
           nav > tags {
               grid-column: 2/-1;
           }
@@ -87,7 +87,7 @@
       main {
           display: grid;
           grid-gap: 6px;
-          grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+          grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
       }
 
       main {
