add mode and optimizely

--- a/index.html
+++ b/index.html
@@ -248,6 +248,8 @@
         ['app', 'Circle CI', 'https://circleci.com/gh/Shopify/'],
         ['app', 'Shippit', 'https://shipit.shopify.io/'],
         ['app', 'Okta', 'https://shopify.okta.com/app/UserHome'],
+        ['app', 'Mode', 'https://modeanalytics.com/shopify/spaces/dee6a1a84b3d'],
+        ['app', 'Optimizely', 'https://app.optimizely.com/projects/'],
 
         ['google', 'Google mail', 'https://mail.google.com/mail/'],
         ['google', 'Google calendar', 'https://calendar.google.com/calendar/'],
