add local keeweb

--- a/index.html
+++ b/index.html
@@ -246,8 +246,9 @@
 
         ['app', 'Slack', 'https://shopify.slack.com/'],
         ['app', 'Circle CI', 'https://circleci.com/gh/Shopify/'],
-        ['app', 'Shippit', 'https://shipit.shopify.io/'],
+        ['app', 'KeeWeb', 'file:///Users/leo/src/github.com/leo-shopify/keeweb/dist/index.html'],
         ['app', 'Okta', 'https://shopify.okta.com/app/UserHome'],
+        ['app', 'Shippit', 'https://shipit.shopify.io/'],
         ['app', 'Mode', 'https://modeanalytics.com/shopify/spaces/dee6a1a84b3d'],
         ['app', 'Optimizely', 'https://app.optimizely.com/projects/'],
 
