--- a/index.html
+++ b/index.html
@@ -248,6 +248,7 @@
         ['app', 'Circle CI', 'https://circleci.com/gh/Shopify/'],
         ['app', 'KeeWeb', 'file:///Users/leo/src/github.com/leo-shopify/keeweb/dist/index.html'],
         ['app', 'Okta', 'https://shopify.okta.com/app/UserHome'],
+        ['app', 'Authme', 'https://authme.shopify.io/'],
         ['app', 'Shippit', 'https://shipit.shopify.io/'],
         ['app', 'Mode', 'https://modeanalytics.com/shopify/spaces/dee6a1a84b3d'],
         ['app', 'Optimizely', 'https://app.optimizely.com/projects/'],
