add identity groups

--- a/index.html
+++ b/index.html
@@ -237,6 +237,7 @@
         ['identity', 'Identity bugsnag js', 'https://app.bugsnag.com/shopify/identity-javascript/'],
         ['identity', 'Identity dashboard prod', 'https://accounts.shopify.com/services/dashboard'],
         ['identity', 'Identity prod', 'https://accounts.shopify.com/'],
+        ['identity', 'Mailing list', 'https://groups.google.com/a/shopify.com/forum/#!forum/identity'],
 
         ['amazon', 'Amazon github repo', 'https://github.com/Shopify/sell-on-amazon'],
         ['amazon', 'Amazon github issues', 'https://github.com/Shopify/sell-on-amazon/issues?q=is%3Aopen+assignee%3Aleo-shopify'],
