replace with zenhub

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 
       start([
         ['identity', 'Identity github repo', 'https://github.com/Shopify/identity'],
-        ['identity', 'Identity github projects', 'https://github.com/Shopify/identity/projects/'],
+        ['identity', 'Identity zenhub projects', 'https://app.zenhub.com/workspace/o/shopify/identity/boards?labels=fed&labels:not=bugsnag&repos=73119466'],
         ['identity', 'Identity bugsnag js', 'https://app.bugsnag.com/shopify/identity-javascript/'],
         ['identity', 'Identity dashboard prod', 'https://accounts.shopify.com/services/dashboard'],
         ['identity', 'Identity prod', 'https://accounts.shopify.com/'],
