--- a/index.html
+++ b/index.html
@@ -263,6 +263,7 @@
         ['doc', 'Grid by example', 'https://gridbyexample.com/examples/'],
         ['doc', 'Org mode manual', 'http://orgmode.org/manual/'],
         ['doc', 'Dev Acceleration', 'https://dev-accel.shopify.io/'],
+        ['doc', 'Dev Handbook', 'https://development.shopify.io/'],
         ['doc', 'Stack overflow', 'https://stack.shopify.io/'],
 
         ['guide', 'Admin style guide', 'http://styleguide.myshopify.com/'],
